# sciknow

./: .active-project  .env.example  .gitignore  AGENTS.md  CLAUDE.md  MIGRATION.md  OPTIMIZATION.md  README.md  pyproject.toml
docs/: AGENTIC_RAG_COURSE_REVIEW.md  ARCHITECTURE.md  BENCHMARKS.md  BENCH_METHODOLOGY.md  BENCH_OPTIMIZATION_PLAN.md  BIBLIOGRAPHY_COVERAGE_RESEARCH.md  BOOK.md  BOOK_ACTIONS.md  CLI.md  COMPARISON.md  CONCEPT_DENSITY.md  CREDITS.md  DEEPSCIENTIST_PORTS.md  EXPAND_ENRICH_RESEARCH_2.md  EXPAND_RESEARCH.md  FORMATTING.md  INGESTION.md  INSTALLATION.md  KG_RESEARCH.md  LESSONS.md  LLAMACPP_BOOK_WRITER.md  MEMPALACE_REVIEW.md  MINERU_VLM_PRO_MIGRATION.md  OPERATIONS.md  PHASE_LOG.md  POST_V2_ROADMAP.md  PROJECTS.md  README.md  RESEARCH.md  RETRIEVAL.md  ROADMAP.md  ROADMAP_INGESTION.md  SCIKNOW_V2_ROADMAP.md  SCIKNOW_V2_SPEC.md  SECTION_ENDING_RESEARCH.md  SNAPSHOT_VERSIONING_RESEARCH.md  STRATEGY.md  TESTING.md  V2_FINAL.md  WIKI_COMPILE_SPEED.md  (+2 more)
docs/benchmarks/: BENCHMARKS.md  BENCH_METHODOLOGY.md  COMPARISON.md
docs/migrations/: MINERU_VLM_PRO_MIGRATION.md
docs/reference/: BOOK.md  BOOK_ACTIONS.md  CLI.md  CONCEPT_DENSITY.md  LESSONS.md  OPERATIONS.md  PROJECTS.md  TESTING.md  WORKFLOW.md
docs/research/: AGENTIC_RAG_COURSE_REVIEW.md  AUTOREASON_REVIEW.md  BIBLIOGRAPHY_COVERAGE_RESEARCH.md  DEEPSCIENTIST_PORTS.md  ENRICH_RESEARCH.md  EXPAND_ENRICH_RESEARCH_2.md  KG_RESEARCH.md  Luce-Org__lucebox-hub.md  MEMPALACE_REVIEW.md  RESEARCH.md  SECTION_ENDING_RESEARCH.md  SNAPSHOT_VERSIONING_RESEARCH.md  huggingface__ml-intern.md  inference_servers.md  speculative_decoding.md
docs/roadmap/: BENCH_OPTIMIZATION_PLAN.md  PHASE_56_ROADMAP.md  PHASE_LOG.md  POST_V2_ROADMAP.md  ROADMAP.md  ROADMAP_INGESTION.md  SCIKNOW_V2_ROADMAP.md  SCIKNOW_V2_SPEC.md  STRATEGY.md  V2_FINAL.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_books_drafts_topics.py  0003_ingest_source.py  0004_book_writing_v2.py  0005_draft_comments.py  0006_wiki_pages.py  0007_scrivener_features.py  0008_knowledge_graph.py  0009_chapter_sections.py  0010_books_custom_metadata.py  0011_autowrite_telemetry.py  0012_autowrite_lessons.py  0013_iteration_content.py  0014_autowrite_tokens_used.py  0015_llm_usage_log.py  0016_scoped_snapshots.py  0017_book_type.py  0018_lesson_kind_scope.py  0019_kg_source_sentence.py  0020_feedback.py  0021_spans.py  0022_chunker_version.py  0023_wiki_annotations.py  0024_pending_downloads.py  0025_visuals.py  0026_visuals_ai_caption.py  0027_paper_type.py  0028_table_structure.py  0029_openalex_enrichment.py  0030_document_provenance.py  0031_canonical_document.py  0032_chunks_fts_column.py  (+10 more)
sciknow/: __init__.py  config.py  logging_config.py  mcp_server.py
scripts/: bench_outline_model.py  bench_qwen36_27b_vs_current.py  bench_retrieval_ab.py  bench_substrate_sweep.py  bench_writer_tps.py  debug_verifier.py  llama-server-router.ini  llama_server_book_writer.sh  ollama-override.conf  qwen3.6-27b-dense.Modelfile  setup.sh  tune_llama_server.sh
(+193 files in other folders)
