[project]
name = "sciknow"
version = "0.1.0"
description = "Local-first scientific knowledge system"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "qdrant-client>=1.9",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "FlagEmbedding>=1.2",
    "tiktoken>=0.7",
    "arxiv>=2.1",
    "ollama>=0.3",
    "mineru[core]>=3.0.9",
    "umap-learn>=0.5.11",
    "hdbscan>=0.8.42",
]

[project.scripts]
sciknow = "sciknow.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
