[project]
name = "sciknow"
version = "0.1.0"
description = "Local-first scientific knowledge system"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "qdrant-client>=1.9",
    "httpx>=0.27",
    "pymupdf>=1.24",
    # v2 Phase B: FlagEmbedding + sentence-transformers + ollama dropped
    # as direct deps. Their roles are now served by llama-server
    # (sciknow.infer.client). To roll back to the v1 in-process path
    # (USE_LLAMACPP_* = False), re-add them with:
    #     uv add 'FlagEmbedding>=1.2' 'sentence-transformers' 'ollama>=0.3'
    "tiktoken>=0.7",
    "arxiv>=2.1",
    "mineru[core,vllm]>=3.0.9",
    "umap-learn>=0.5.11",
    "hdbscan>=0.8.42",
    "weasyprint>=68.1",
    "mcp>=1.27.0",
    "py3langid>=0.3.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
sciknow = "sciknow.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# opencv-python and opencv-python-headless install to the SAME `cv2/`
# directory on disk and clobber each other — whichever was installed
# second ends up corrupted (the `cv2` module loads but has zero
# attributes, so `cv2.imread` is missing and MinerU dies with
# "module 'cv2' has no attribute 'imread'" on every PDF).
#
# Our tree has both in its dep graph: `mineru` requires `opencv-python`
# and `albumentations`/`albucore` require `opencv-python-headless`.
# Pick opencv-python (superset of headless; albumentations still finds
# cv2 at runtime) and force-skip headless via an impossible marker so
# it won't be resolved or installed.
#
# If you hit "module 'cv2' has no attribute ..." again, reinstall via:
#   uv pip uninstall -y opencv-python opencv-python-headless
#   uv pip install --force-reinstall --no-deps opencv-python
override-dependencies = [
    "opencv-python-headless; sys_platform == 'never'",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
